# projet_maths_5rvjv

./: .gitignore  CMakeLists.txt  main.cpp
include/: CollisionDetection.h  Emitter.h  Engine.h  GameObject.h  Globals.h  Mesh.h  Particle.h  ParticleSystem.h  PhysicsSystem.h  Random.h  Rigidbody.h  Shape.h  Simulation.h  Transform.h  Vector2.h  Vector3.h  helpers.h  init.h  input.h
include/Mesh/: Mesh.h  MeshRenderer.h
include/Mesh/Circle/: Circle.h
include/Mesh/Polygon/: Rect.h  Square.h
include/Particles/: Particle.h  ParticleEmitter.h  ParticleSystem.h
include/Particles/Emitters/: LiquidStreamEmitter.h  SparkleEmitter.h
include/Physics/: CollisionDetection.h  CollisionShape.h  LiquidBody.h  PhysicsEmitter.h  PhysicsSystem.h  Rigidbody.h  Shape.h
include/Vector/: Vector2.h  Vector3.h
include/glad/: glad.h
include/imgui-1.92.5/: imgui_widgets.cpp
include/imgui-1.92.5/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
shaders/: base.vert  particle.vert
src/: Emitter.cpp  Engine.cpp  GameObject.cpp  Mesh.cpp  Particle.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  Rigidbody.cpp  Shape.cpp  Simulation.cpp  Transform.cpp  glad.c  helpers.cpp  init.cpp
src/Mesh/: Mesh.cpp  MeshRenderer.cpp
src/Mesh/Circle/: Circle.cpp
src/Particles/: Particle.cpp  ParticleEmitter.cpp  ParticleSystem.cpp
src/Physics/: CollisionShape.cpp  LiquidBody.cpp  PhysicsEmitter.cpp  PhysicsSystem.cpp  Rigidbody.cpp  Shape.cpp
src/Physics/CollisionShapes/: Box.cpp  Circle.cpp  Polygon.cpp
src/Vector/: Vector2.cpp  Vector3.cpp
